@@ -1,12 +1,11 @@
 package com.dcg.handle;
 
 
-import com.unfbx.chatgpt.OpenAiClient;
-import com.unfbx.chatgpt.entity.chat.ChatChoice;
-import com.unfbx.chatgpt.entity.chat.ChatCompletion;
-import com.unfbx.chatgpt.entity.chat.ChatCompletionResponse;
-import com.unfbx.chatgpt.entity.chat.Message;
-import com.unfbx.chatgpt.entity.common.Choice;
+import com.plexpt.chatgpt.ChatGPT;
+import com.plexpt.chatgpt.entity.chat.ChatChoice;
+import com.plexpt.chatgpt.entity.chat.ChatCompletion;
+import com.plexpt.chatgpt.entity.chat.ChatCompletionResponse;
+import com.plexpt.chatgpt.entity.chat.Message;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import me.chanjar.weixin.common.session.WxSessionManager;
@@ -15,7 +14,7 @@ import me.chanjar.weixin.mp.bean.message.WxMpXmlMessage;
 import me.chanjar.weixin.mp.bean.message.WxMpXmlOutMessage;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 
 /**
@@ -25,7 +24,7 @@ import java.util.Map;
 @Component
 @AllArgsConstructor
 public class MsgHandler extends AbstractHandler {
-    private OpenAiClient openAiClient;
+    private ChatGPT chatGPT;
 
     @Override
     public WxMpXmlOutMessage handle(WxMpXmlMessage wxMessage,
@@ -40,26 +39,24 @@ public class MsgHandler extends AbstractHandler {
 
     // 采用 test-davince-003模型
     private String fetchContentByChatGptText_davinci_003(WxMpXmlMessage wxMessage) {
-        String textContent = wxMessage.getContent();
-        Choice[] choices = openAiClient.completions(textContent).getChoices();
-        StringBuilder sb = new StringBuilder();
-        for (Choice choice : choices) {
-            sb.append(choice.getText());
-        }
-        return sb.toString();
+        return chatGPT.chat(wxMessage.getContent());
     }
 
 
     // 采用chatgpt3.5-turbo-0301模型
     public String fetchContentByChatGpt3_5(WxMpXmlMessage wxMessage) {
         String textContent = wxMessage.getContent();
-        Message message = Message.builder().role(Message.Role.USER).content(textContent).build();
-        ChatCompletion chatCompletion = ChatCompletion.builder().messages(List.of(message)).build();
-        ChatCompletionResponse choices = openAiClient.chatCompletion(chatCompletion);
-
-//        Choice[] choices = openAiClient.completions(textContent).getChoices();
+        Message system = Message.ofSystem("请使用调皮的话语回答!!!");
+        Message message = Message.of(textContent);
+        ChatCompletion chatCompletion = ChatCompletion.builder()
+                .model(ChatCompletion.Model.GPT_3_5_TURBO.getName())
+                .messages(Arrays.asList(system, message))
+                .maxTokens(400)
+                .temperature(0.5)
+                .build();
+        ChatCompletionResponse response = chatGPT.chatCompletion(chatCompletion);
         StringBuilder sb = new StringBuilder();
-        for (ChatChoice choice : choices.getChoices()) {
+        for (ChatChoice choice : response.getChoices()) {
             sb.append(choice.getMessage().getContent());
         }
         return sb.toString();
